# bits-over-random

./: LICENSE  README.md  WALKTHROUGH.md  dashboard_exhaust.jsonl  pyproject.toml
examples/: audit_logs_demo.py  case2_lottery.py  tool_selection_58.py
src/bits_over_random.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/bor/: __init__.py  audit.py  cli.py  logs.py  metrics.py
tests/: test_audit.py  test_logs.py  test_metrics.py
