[project]
name = "bits-over-random"
version = "0.1.0"
description = "Chance-corrected evaluation utilities for retrieval, RAG, and tool-selection systems."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Vyzantinos Repantis" }
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
bor = "bor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"